// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Processors should render when loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <div
      className="action-bar"
    >
      <div
        className="text"
      >
        <h4>
          Processors
        </h4>
        <p>
          A processor is a third-party with access to your users data. You can manage from here which are enabled or not, and which actions are allowed to access.
        </p>
      </div>
      <div
        className="spacer"
      />
      <button
        className="ui-action btn"
        onClick={[Function]}
      >
        + Add Processor
      </button>
    </div>
    <div
      className="content"
    >
      <Loader />
    </div>
  </section>
</React.Fragment>
`;

exports[`(Component) Processors should render when not loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <div
      className="action-bar"
    >
      <div
        className="text"
      >
        <h4>
          Processors
        </h4>
        <p>
          A processor is a third-party with access to your users data. You can manage from here which are enabled or not, and which actions are allowed to access.
        </p>
      </div>
      <div
        className="spacer"
      />
      <button
        className="ui-action btn"
        onClick={[Function]}
      >
        + Add Processor
      </button>
    </div>
    <div
      className="row"
    >
      <ProcessorCard
        data={
          Object {
            "consented": 72,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "nielsen.svg",
            "name": "Nielsen",
            "scopes": Array [
              "Full Name",
              "Email",
              "Phone Number",
            ],
          }
        }
        key="0"
        onClick={[Function]}
        onDelete={[Function]}
      />
      <ProcessorCard
        data={
          Object {
            "consented": 64,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "liveramp.svg",
            "name": "Live Ramp",
            "scopes": Array [
              "Email",
            ],
          }
        }
        key="1"
        onClick={[Function]}
        onDelete={[Function]}
      />
      <ProcessorCard
        data={
          Object {
            "consented": 25,
            "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat neque, pariatur ipsa qui facere nobis error iste consectetur quo exercitationem!",
            "logoUrl": "experian.svg",
            "name": "Experian",
            "scopes": Array [
              "Full Name",
              "Phone Number",
            ],
          }
        }
        key="2"
        onClick={[Function]}
        onDelete={[Function]}
      />
    </div>
  </section>
</React.Fragment>
`;
